--- a/src/app/pages/todos/todos.component.html
+++ b/src/app/pages/todos/todos.component.html
@@ -1,1 +1,5 @@
-<app-todos-todos></app-todos-todos>
+<app-essentials-header></app-essentials-header>
+
+<div class="container mt-4">
+  <app-todos-todos></app-todos-todos>
+</div>
