--- a/src/app/essentials/nav/nav.component.html
+++ b/src/app/essentials/nav/nav.component.html
@@ -1,10 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" routerLink="/">Goal Setter</a>
 
-  <div class="navbar-nav">
-    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-    <a class="nav-item nav-link" href="#">Features</a>
-    <a class="nav-item nav-link" href="#">Pricing</a>
-    <a class="nav-item nav-link disabled" href="#">Disabled</a>
-  </div>
+    <div class="navbar-nav">
+        <a class="nav-item nav-link" routerLink="/" routerLinkActive="active">Home
+            <span class="sr-only">(current)</span></a>
+    </div>
 </nav>
