--- a/src/app/todos/todo/todo.component.html
+++ b/src/app/todos/todo/todo.component.html
@@ -15,7 +15,7 @@
                 <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
             </div>
 
-            <small class="text-muted">9 mins</small>
+            <small class="text-muted">{{todo.getLength()}} mins</small>
         </div>
     </div>
 </div>
