--- a/src/app/todos/todo/todo.component.html
+++ b/src/app/todos/todo/todo.component.html
@@ -11,8 +11,8 @@
 
         <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                <a class="btn btn-sm btn-outline-secondary" [routerLink]="[todo.getId()]">View</a>
+                <a class="btn btn-sm btn-outline-secondary" [routerLink]="[todo.getId(), 'edit']">Edit</a>
             </div>
 
             <small class="text-muted">{{todo.getLength()}} mins</small>
