--- a/src/app/todos/todo-form/todo-form.component.html
+++ b/src/app/todos/todo-form/todo-form.component.html
@@ -22,6 +22,17 @@
         >
     </div>
     <div class="form-group">
+        <label for="todo-image">Image Url</label>
+        <input
+            type="text"
+            name="image-url"
+            class="form-control"
+            id="todo-image"
+            placeholder="Enter Image Url"
+            [(ngModel)]="imageUrlData"
+        >
+    </div>
+    <div class="form-group">
         <label for="todo-time-to-read">Time to read</label>
         <input
             type="number"
