--- a/src/app/todos/todo-edit/todo-edit.component.html
+++ b/src/app/todos/todo-edit/todo-edit.component.html
@@ -13,6 +13,7 @@
                 <app-todos-todo-form
                     [todo]="todo"
                     (onSubmit)="setDataToTodo($event)"
+                    (onCancel)="router.navigate(['/todos'])"
                 ></app-todos-todo-form>
             </div>
             <!-- /.card-body -->
