--- a/src/app/essentials/nav/nav.component.html
+++ b/src/app/essentials/nav/nav.component.html
@@ -1,8 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" routerLink="/">Goal Setter</a>
 
-    <div class="navbar-nav">
+    <div class="navbar-nav mr-auto">
         <a class="nav-item nav-link" routerLink="/" routerLinkActive="active">Home
             <span class="sr-only">(current)</span></a>
     </div>
+
+    <a class="nav-item nav-link" [routerLink]="['/todos', 'create']">Create a Todo</a>
 </nav>
