Add autofocus directive, delete app testing file and implement autofocs directive to input field

--- a/src/app/todos/todo-form/todo-form.component.html
+++ b/src/app/todos/todo-form/todo-form.component.html
@@ -9,6 +9,7 @@
             placeholder="Enter name"
             [ngModel]="todo.getName()"
             required
+            appTodosAutofocusElement
             #nameField="ngModel"
         >
         <p *ngIf="form.submitted && nameField.invalid" class="invalid-feedback">
